--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
       <section class="about l-section" id="about">
         <div class="l-inner">
           <h2 class="title">About</h2>
-          <p>1991年3月生まれ。茨城県つくばみらい市出身。<br>国立大学の工学部を卒業後、2013年よりITエンジニアとして働いています。<br>現在はPythonを使用した開発やデータ分析をしています。</p>
+          <p>
+            1991年3月生まれ。茨城県つくばみらい市出身。<br>国立大学の工学部を卒業後、2013年よりITエンジニアとして働いています。<br>現在はWebアプリケーション開発や、Pythonでのデータ分析業務に携わっています。
+          </p>
         </div>
       </section>
-      <!-- /contact -->
+      <!-- /about -->
 
       <!-- skill -->
       <section class="skill l-section" id="skill">
@@ -177,29 +179,6 @@
         </div>
       </section>
       <!-- /works -->
-
-      <!-- test -->
-      <section class="test l-section">
-        <div class="Block1">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo
-            consequat.
-          </p>
-        </div>
-        <div class="Block2">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo
-            consequat.
-          </p>
-        </div>
-      </section>
-      <!-- /test -->
 
       <!-- contact -->
       <section class="contact l-section" id="contact">
