--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <div class="split--body">
           <p class="split--title">WATARU<br>NAGATSUKA</p>
           <p class="split--text">
-            「誰の、どんな問題を解決するのか？」「そのためにどうするのか？」を考え、
+            「誰の、どんな問題を解決するのか？」<br class="u-show-sp">
+            「そのためにどうするのか？」を考え、<br class="u-show-sp">
             ユーザーとお客様に愛されるようなサイト作りを目指します。<br>
             ぜひ、デザインからコーディングまでご相談ください。<br>
           </p>
