--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="about--body">
             <p class="about--img"><img src="./images/person.png" alt="私のアイコン" /></p>
             <p>
-              1991年3月生まれ。茨城県つくばみらい市出身。<br>
+              1991年3月生まれの茨城県出身。<br>
               国立大学の工学部を卒業後、2013年よりITエンジニアとして働いています。<br>
               現在はWebアプリケーション開発や、データ分析関連の開発に携わっています。<br>
               趣味はサッカー、キャンプなど。<br>
@@ -100,8 +100,8 @@
               <div class="skill--body">
                 <h3 class="skill--name">HTML5/CSS3</h3>
                 <p class="skill--text">
-                  SEOを意識したコーディングや、効率的なCSS設計が可能です。<br>レスポンシブ（スマホ・タブレットでの表示）対応についても、新規・既存を問わず承ります。
-
+                  SEOを意識したコーディングや、効率的なCSS設計が可能です。<br>
+                  レスポンシブ（スマホ・タブレットでの表示）対応につきましても、新規・既存を問わず承ります。
                 </p>
               </div>
             </div>
@@ -110,7 +110,7 @@
               <div class="skill--body">
                 <h3 class="skill--name">Sass</h3>
                 <p class="skill--text">
-                  設計概念に基づき、再利用や保守性を意識したコーディングが可能です。</p>
+                  設計概念に基づき、適切な命名や再利用・保守・拡張を意識したコーディングを心がけています。</p>
               </div>
             </div>
             <div class="skill--item js-fadeInUp">
@@ -148,10 +148,18 @@
           <h2 class="title">Works</h2>
           <div class="works--list">
             <div class="works--item js-fadeInUp">
-              <a href="https://nagawanage.github.io/html_po-design/" alt="サンプルコーポレートサイト" target="_blank"
+              <a href="https://nagawanage.github.io/html_po-design/" alt="架空コーポレートサイト" target="_blank"
                 rel="noopener noreferrer">
-                <p class="works--img"><img src="./images/my_work1.png" alt="" /></p>
+                <p class="works--img"><img src="./images/work_corporate.png" alt="" /></p>
                 <p class="works--sitename">架空コーポレートサイト</p>
+                <p class="works--info">コーディング（レスポンシブ）</p>
+              </a>
+            </div>
+            <div class="works--item js-fadeInUp">
+              <a href="https://sharp-sammet-256528.netlify.app" alt="架空トラベルサイト" target="_blank"
+                rel="noopener noreferrer">
+                <p class="works--img"><img src="./images/work_stayworld.png" alt="" /></p>
+                <p class="works--sitename">架空トラベルサイト</p>
                 <p class="works--info">コーディング（レスポンシブ）</p>
               </a>
             </div>
@@ -159,7 +167,7 @@
               <a href="works-template.html">
                 <p class="works--img"><img src="./images/alyssa-ledesma-TJlU.jpg" alt="sample" /></p>
                 <p class="works--sitename">サッカークラブHP</p>
-                <p class="works--info">デザイン・コーディング（WordPress）</p>
+                <p class="works--info">デザイン・コーディング・WordPressテーマ作成</p>
               </a>
             </div>
             <div class="works--item js-fadeInUp">
