update: twitter icon

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="split--img"></div>
           <div class="split--body">
             <p class="split--title">WATARU<br>NAGATSUKA</p>
-            <p class="split--text deco2">
+            <p class="split--text deco_vertical-line">
               「誰の、どんな問題を解決するのか？」<br class="u-show-sp">
               「そのためにどうするのか？」を考え、<br class="u-show-sp">
               ユーザーとお客様に愛されるようなサイト作りを目指します。<br>
@@ -207,8 +207,8 @@
             お問い合わせは、<br class="u-show-sp">SNSかメールにてお願いいたします。
           </p>
           <div class="contact--list">
-            <a class="contact--item" href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
-            <a class="contact--item" href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
+            <a class="contact--item icon twitter" href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+            <!-- <a class="contact--item instagram" href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a> -->
             <span class="contact--item">nagawanage_contact@gmail.com</span>
           </div>
         </div>
