--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <!-- skill -->
       <section class="skill l-section" id="skill">
         <div class="l-inner">
-          <h2 class="title deco3">Skills</h2>
+          <h2 class="title deco_shadow">Skills</h2>
           <div class="skill--list">
             <div class="skill--item js-fadeInUp">
               <div class="skill--icon icon-html fab fa-html5"></div>
@@ -154,7 +154,7 @@
       <!-- works -->
       <section class="works l-section" id="works">
         <div class="l-inner">
-          <h2 class="title deco3">Works</h2>
+          <h2 class="title deco_shadow">Works</h2>
           <div class="works--list">
             <div class="works--item js-fadeInUp">
               <a href="https://nagawanage.github.io/html_po-design/" alt="架空コーポレートサイト" target="_blank"
@@ -174,9 +174,9 @@
             </div>
             <div class="works--item js-fadeInUp">
               <a>
-                <p class="works--img"><img src="./images/alyssa-ledesma-TJlU.jpg" alt="sample" /></p>
-                <p class="works--sitename">サッカークラブHP</p>
-                <p class="works--info">デザイン・コーディング・WordPressテーマ化</p>
+                <p class="works--img"><img src="./images/works-dummy-thumb.jpg" alt="sample" /></p>
+                <p class="works--sitename">作品名が入る</p>
+                <p class="works--info">Design</p>
               </a>
             </div>
             <div class="works--item js-fadeInUp">
@@ -216,7 +216,7 @@
             <a class="contact--item twitter icon--twitter" href="https://twitter.com/" target="_blank"
               rel="noopener">Twitter</a>
             <a class="contact--item mail icon--mail"
-              href="mailto:nagawa_contact@gmail.com?subject=ポートフォリオからのお問い合わせ">mail</a>
+              href="mailto:nagawa.contact@gmail.com?subject=ポートフォリオからのお問い合わせ">mail</a>
           </div>
         </div>
       </section>
