--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
+
   <link href="styles/ress.css" media="all" rel="stylesheet" type="text/css" />
   <link href="styles/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="./images/favicon.ico" />
@@ -161,7 +163,7 @@
                 rel="noopener noreferrer">
                 <p class="works--img"><img src="./images/work_corporate.png" alt="" /></p>
                 <p class="works--sitename">架空コーポレートサイト</p>
-                <p class="works--info">コーディング（レスポンシブ）</p>
+                <p class="works--info">コーディング（レスポンシブ） 【下層ページ、お問合せフォームあり】</p>
               </a>
             </div>
             <div class="works--item js-fadeInUp">
@@ -169,14 +171,15 @@
                 rel="noopener noreferrer">
                 <p class="works--img"><img src="./images/work_stayworld.png" alt="" /></p>
                 <p class="works--sitename">架空トラベルサイト</p>
-                <p class="works--info">コーディング（レスポンシブ）</p>
+                <p class="works--info">スクロールやホバー時のアニメーションを多く使用したコーディング（レスポンシブ）</p>
               </a>
             </div>
             <div class="works--item js-fadeInUp">
-              <a>
-                <p class="works--img"><img src="./images/works-dummy-thumb.jpg" alt="sample" /></p>
-                <p class="works--sitename">作品名が入る</p>
-                <p class="works--info">Design</p>
+              <a href="https://angry-shannon-d0dce5.netlify.app" alt="架空ECサイト" target="_blank"
+                rel="noopener noreferrer">
+                <p class="works--img"><img src="./images/work_bota.png" alt="" /></p>
+                <p class="works--sitename">架空ECサイト</p>
+                <p class="works--info">12分割のCSS Gridを基盤としたコーディング（レスポンシブ）</p>
               </a>
             </div>
             <div class="works--item js-fadeInUp">
